--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,8 @@
 @import 'tailwindcss/utilities';
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-family: 'Roboto-Slab', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,6 +15,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 500;
+  line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
