--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto:wght@400;500;700&display=swap');
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
 :root {
   line-height: 1.5;
-  font-family: 'Roboto-Slab', sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -22,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto slab', sans-serif;
 }
 
 a {
