Update styles,, added new InfoDoc components, fix some bugs, more responsive, reformating structures, better code. V 2.0 release 1

--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -1,3 +1,18 @@
 .sidebar {
    background-color: black;
   }
+
+
+.hamburger-menu {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+   width: 0.8rem;
+   height: 1.5rem;
+}
+
+.hamburger-menu div {
+   width: 0.8rem;
+   height: 0.1rem;
+   background: currentColor;
+}
